[package]
name = "brownstone"
version = "1.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MPL-2.0"
description = "Utilities for building fixed-size arrays"
repository = "https://github.com/Lucretiel/brownstone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }

[features]
std = []

[package.metadata.docs.rs]
all-features = true
